# ArduinoWrapper

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakeSettings.json  DOC.md  INTERNALS.md  README.md
arduino_tests/bit_and_byte/: bit_and_byte.ino
arduino_tests/lcd_chars/: lcd_chars.ino
arduino_tests/math/: math.ino
arduino_tests/serial/: serial.ino
arduino_tests/string/: string.ino
miscellaneous/: charTester.cpp
miscellaneous/arduinoCode/: CMakeLists.txt  README.md  main.cpp  sample.cpp  sample_private.hpp
miscellaneous/arduinoCodeTest/: CMakeLists.txt  README.md  main.cpp
miscellaneous/custom-triplets/: x64-linux-custom.cmake  x64-windows-static-custom.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/arduinoCode/: CMakeLists.txt  main.cpp  sample.cpp  sample.hpp  sample_private.hpp
src/core/codeArd/: CMakeLists.txt  sample.hpp
src/core/lcdDebug/: CMakeLists.txt  Window.cpp  Window.hpp  lcdDebug.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/serialDebug/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/test/: CMakeLists.txt  main.cpp
tools/: arduinoCodeChecker.sh  automated-testing.py
tools/arduinoCodeCompiler/: compile.sh  main.cpp  sample_private.hpp
